ARROW-6481: [C++] Avoid copying large ConvertOptions

If you have N columns and a large subset of them are customized in ConvertOptions,
copying ConvertOptions in each Converter or ColumnBuilder produces a quadratic
explosion.